turtleart.diskfour.DiskFour.scala.code
override def run() {
    for (c<-1 to 90){
    avance(100);recule(100);droite(1)
  }
  setCouleur(olor.RED)
  for (c<-1 to 90){
    avance(100);recule(100);droite(1)
  }
}